--- a/app.json
+++ b/app.json
@@ -22,13 +22,22 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-        "ios": {
-                  "bundleIdentifier": "com.opolislabs.testexpokit",
-      "supportsTablet": true
-                      },
-                          "android": {
-                                    "package": "com.opolislabs.testexpokit"
-                                        }
-
+    "ios": {
+      "bundleIdentifier": "com.opolislabs.testexpokit",
+      "supportsTablet": true,
+      "publishBundlePath": "ios/test-expokit/Supporting/shell-app.bundle",
+      "publishManifestPath": "ios/test-expokit/Supporting/shell-app-manifest.json"
+    },
+    "android": {
+      "package": "com.opolislabs.testexpokit",
+      "publishBundlePath": "android/app/src/main/assets/shell-app.bundle",
+      "publishManifestPath": "android/app/src/main/assets/shell-app-manifest.json"
+    },
+    "isDetached": true,
+    "detach": {
+      "iosExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/ios-v2.10.2-sdk32.0.0-c59c23cd-1d49-49d2-a633-d03f9d554cf6.tar.gz",
+      "androidExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/android-v2.10.5-sdk32.0.0-6b87ee30-8cbe-4cc6-b5ba-b03b77e34f90.tar.gz"
+    },
+    "scheme": "expc87b8f39f4414c02a0d07ef145e692b2"
   }
 }
