--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,1 +1,9 @@
 include ':app'
+
+include ':expo-firebase-app'
+project(':expo-firebase-app').projectDir = new File(rootProject.projectDir, '../node_modules/expo-firebase-app/android')
+
+include ':expo-core'
+project(':expo-core').projectDir = new File(rootProject.projectDir, '../node_modules/expo-core/android')
+
+
