Add working version of react-native-iap

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "expo-firebase-app": "^2.0.0",
     "expokit": "32.0.5",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-iap": "^2.4.0-beta12"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
